[project]
name = "cryptolens"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "maoki", email = "michihito.aoki@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.0",
    "openai>=1.33.0",
    "pandas>=2.2.2",
    "polars>=0.20.31",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "networkx>=3.3",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.2",
    "xgboost>=2.0.3",
    "pyvis>=0.3.2",
    "pyarrow>=16.1.0",
    "openpyxl>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
    "ruff>=0.4.8",
    "spyder-kernels==2.5.*",
    "jupyterlab>=4.2.2",
    "notebook>=7.2.1",
    "jupyterlab-code-formatter>=2.2.1",
    "jupyterlab-lsp>=5.1.0",
    "python-lsp-server>=1.11.0",
    "python-lsp-ruff>=2.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cryptolens"]
